<resources>
    <string name="app_name">InStory</string>
    <string name="email_invalid">Invalid email format</string>
    <string name="password_invalid">Password must be more than 8 characters</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="log_in">Log In</string>
    <string name="to_register_text">Create New Account</string>
    <string name="welcome_message">Welcome to InStory</string>
    <string name="logo_description">This is a logo of InStory</string>
    <string name="required_field">Please fill in this field</string>
    <string name="name">Name</string>
    <string name="success_register_message">Successfully created an account!</string>
    <string name="email_taken_error">Email is already taken</string>
    <string name="error_register_general">Unexpected error when creating account</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_in_segue">Have an Account?</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up_title">Sign up to InStory</string>
    <string name="sign_up_segue">Don\'t have an account?</string>
    <string name="sign_in_title">Sign in to InStory</string>
    <string name="email_not_found_message">Email not found</string>
    <string name="invalid_password">Invalid password</string>
    <string name="error_login_general">Unexpected error when logging in</string>
    <string name="log_out">Log out</string>
    <string name="fab_description">Add a story</string>
    <string name="press_back_again_to_exit_app">Press back again to exit app</string>
    <string name="swipe_down_to_reload">Swipe down to reload</string>
    <string name="error_story">Unable to fetch stories</string>
    <string name="empty_post">No post found</string>
    <string name="story_hour_timestamp">• %1$dh</string>
    <string name="story_second_timestamp">• %1$ds</string>
    <string name="story_minute_timestamp">• %1$dm</string>
    <string name="story_day_timestamp">• %1$dd</string>
    <string name="story_week_timestamp">• %1$dw</string>
    <string name="map_story_hour_timestamp">Last online %1$d hour(s) ago</string>
    <string name="map_story_second_timestamp">Last online %1$d second(s) ago</string>
    <string name="map_story_minute_timestamp">Last online %1$d minute(s) ago</string>
    <string name="map_story_day_timestamp">Last online %1$d day(s) ago</string>
    <string name="map_story_week_timestamp">Last online %1$d week(s) ago</string>
    <string name="error_fetching_data">Error fetching data</string>
    <string name="story_image_description">This is story image</string>
    <string name="sample_username">gary3santo</string>
    <string name="uploaded_on_timestamps">Uploaded on %1$s</string>
    <string name="lorem_ipsum_long">Nam quis nulla. Integer malesuada. In in enim a arcu imperdiet malesuada. Sed vel lectus. Donec odio urna, tempus molest</string>
    <string name="language">Language</string>
    <string name="description">Description</string>
    <string name="choose_image_from">Choose Image From</string>
    <string name="gallery">Gallery</string>
    <string name="camera">Camera</string>
    <string name="please_choose_an_image">Please choose an image</string>
    <string name="error_uploading_story">Error uploading story</string>
    <string name="story_successfully_posted">Story successfully posted</string>
    <string name="tap_image_to_choose">Tap Image to Choose</string>
    <string name="upload">Upload</string>
    <string name="map_description">Map containing InStory users around the world</string>
    <string name="maps">Maps</string>
    <string name="read_more_text">…Read more</string>
    <string name="unable_to_access_location">Unable to access location</string>
    <string name="fail_location">Location is not found. Try Again</string>
    <string name="retry">Retry</string>
    <string name="unable_to_fetch_data">Unable to fetch data</string>
    <string name="use_my_location">Use my location</string>
</resources>